# pcl_processor

./: CMakeLists.txt  package.xml  plugins.xml
include/pcl_processor/: pointcloud_pipeline.hpp  pointcloud_processor.hpp
include/pcl_processor/filters/: crop_box.hpp  radius_outlier_removal.hpp  voxel_grid.hpp
include/pcl_processor/segmentation/: extract_clusters.hpp  ground_plane_fitting.hpp
launch/: pcl_processor_xyz.launch.py
params/: example.yaml
src/: processor_xyz.cpp
src/filters/: crop_box.cpp  radius_outlier_removal.cpp  voxel_grid.cpp
src/segmentation/: extract_clusters.cpp  ground_plane_fitting.cpp
